--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Michael michaud",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.3",
     "express": "^4.17.1",
